apps/overlays/dev/kek-project/kek-app/deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kek-app
spec:
  template:
    spec:
      containers:
      - name: kek-app
        image: gen921/hw07:1.0.2
