apps/overlays/dev/kek-project/kek-app/resources-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kek-app
spec:
  template:
    spec:
      containers:
      - name: kek-app
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
